# ChangeLog for media-video/xvideoservicethief
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  xvideoservicethief-2.1.ebuild, xvideoservicethief-9999.ebuild:
  Fix spelling mistakes o:)

*xvideoservicethief-2.1 (04 Jul 2009)

  04 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
  +xvideoservicethief-2.1.ebuild:
  Version bump

  08 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
  xvideoservicethief-9999.ebuild:
  Sync with portage

  09 May 2009; Markos Chandras <hwoarang@gentoo.org>
  -xvideoservicethief-2.0.0.ebuild, -files/gcc-4.3.patch:
  On tree

*xvideoservicethief-2.0.0 (02 May 2009)

  02 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +xvideoservicethief-2.0.0.ebuild, -xvideoservicethief-2.0.0_alpha.ebuild:
  Dropping 'alpha' suffix from ebuilds' name

*xvideoservicethief-2.0.0_alpha (02 May 2009)

  02 May 2009; Markos Chandras <hwoarang@gentoo.org>
  +xvideoservicethief-2.0.0_alpha.ebuild:
  Version bump

  08 Apr 2009; Maciej Mrozowski (reavertm) <reavertm@poczta.fm>
  xvideoservicethief-9999.ebuild:
  PATCHES is bash array

  14 Mar 2009; Ben de Groot <yngwin@gentoo.org>
  -xvideoservicethief-1.8.2.ebuild:
  Remove release version, which is in portage now

*xvideoservicethief-9999 (20 Feb 2009)

  20 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  +xvideoservicethief-9999.ebuild:
  Adding live ebuild

  08 Feb 2009; Markos Chandras <hwoarang@gentoo.org>
  xvideoservicethief-1.8.2.ebuild:
  add ~amd64 keyword

*xvideoservicethief-1.8.2 (15 Jan 2009)

  15 Jan 2009; Ben de Groot <yngwin@gentoo.org> +files/gcc-4.3.patch,
  +xvideoservicethief-1.8.2.ebuild:
  Initial import from bug 210894. Ebuild by Markos Chandras and me.
