@@ -1,5 +1,3 @@
-DIST xVST_2_1_src.zip 3201031 RMD160 9e6a757b53c61252fdbb7ddc2216f2fe5fa9817f SHA1 ab98bff7c8b01697e98fc06e70cb893fb521811b SHA256 1d093e1a3aeceece4dce30744b9c3512345340d4695d41cf65a35b49565b0c89
-EBUILD xvideoservicethief-2.1.ebuild 1999 RMD160 3307e64daeaef19eace17169b69f41372bd97cf7 SHA1 266766509804b9df4ef1616edc4db86b1a933fde SHA256 7d3b49aba721d7898e36f216d78a80e68a06bdb66557b20c5b65fd007c104f33
 EBUILD xvideoservicethief-9999.ebuild 1752 RMD160 0b116aa0be8fce7ef303be6bf547080f5ab97d3d SHA1 b0200116ef4e016ece0eb1b91acbd55bf2c8e2cb SHA256 d4a2eea66ed2c7f433181fe498f862f00d3f6328df938ef40b1e517df4cff058
-MISC ChangeLog 1758 RMD160 260b4349490d9af97ad478e54625bf1db9c51ab4 SHA1 a4d78613e3748f166eccda792b6fb338d20086d0 SHA256 5b6f4afa6932e1ddae0853dd922af2a98d3fce92c3a591f46cd68591962cd589
+MISC ChangeLog 1856 RMD160 3a554887affd8b455614105222ebf89464a7927f SHA1 68b2b4b850f6169b275e93bccdf23892fb885242 SHA256 4590072a86334656f33efa525660e4dfe46a8f5d2c42e67b382eba0a95dc9fff
 MISC metadata.xml 178 RMD160 91f88b965189260ac1fe4efae4bfbb857cabc4db SHA1 cef36307764cbf7dea255f4cd6b8520d7065ab30 SHA256 3e6e50d439f99a10df9c43fb7fe940f96056bb6f08e1342fe71e60100676f267
